--- a/eden-connect-react/package.json
+++ b/eden-connect-react/package.json
@@ -20,8 +20,12 @@
     "marked": "^14.1.3",
     "mobx": "^6.13.5",
     "mobx-react-lite": "^4.0.7",
+    "quill": "^2.0.3",
+    "quill-delta-to-html": "^0.12.1",
+    "quill-image-resize-module-react": "^3.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^6.27.0"
   },
   "devDependencies": {
