--- a/eden-connect-react/package.json
+++ b/eden-connect-react/package.json
@@ -25,6 +25,7 @@
     "quill-image-resize-module-react": "^3.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-modal": "^3.16.3",
     "react-quill": "^2.0.0",
     "react-router-dom": "^6.27.0"
   },
